gccida/g0/genrtl_case_label
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/genrtl_case_label/src/c-semantics.c:1137:7: error: use of undeclared identifier 'explained_1'
if ( !explained_1 ) 
      ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/genrtl_case_label/src/c-semantics.c:1140:1: error: use of undeclared identifier 'explained_1'
explained_1 = 1; 
^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/genrtl_case_label/src/obj/c-semantics.o] Error 1
